# doctest-ai

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/dlt/: init.feature  mcp-servers.json  pyproject.toml  test_init.py
examples/kedro/: new.feature  pyproject.toml  test_new.py
src/doctest_ai/: __init__.py  _config.py  plugin.py  sh_run.py
