[project]
name = "doctest-ai"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: Pytest",
]
dependencies = [
    "pytest-bdd>=8.1.0",
]

[project.scripts]
doctest-ai = "doctest_ai:main"

[project.entry-points.pytest11]
doctest-ai = "doctest_ai.plugin"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
