[project]
name = "doctest-ai"
version = "0.1.0"
description = "A pytest plugin that enables testing agentic coding workflows using pytest-bdd."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Pytest",
]
dependencies = [
    "pydantic-settings>=2.3.0",
    "pytest-bdd>=8.1.0",
]

[project.scripts]
doctest-ai = "doctest_ai:main"

[project.entry-points.pytest11]
doctest-ai = "doctest_ai.plugin"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
